--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^7.4.8",
     "expo": "54.0.13",
     "expo-asset": "~12.0.9",
+    "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.9",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.17",
@@ -28,9 +29,14 @@
     "react-native": "0.81.4",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-paper": "^5.14.5",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "^13.16.0",
     "xlsx": "^0.18.5"
   },
   "private": true
